--- a/src/Main/GameComponent/Board/Board.fxml
+++ b/src/Main/GameComponent/Board/Board.fxml
@@ -32,7 +32,7 @@
             <Image url="@TablePicture/Board-1.png" />
          </image>
       </ImageView>
-      <Label fx:id="messageField" alignment="CENTER" contentDisplay="CENTER" ellipsisString="" layoutX="-8.0" layoutY="800.0" prefHeight="84.0" prefWidth="1108.0" textAlignment="CENTER" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <Label fx:id="messageField" alignment="TOP_CENTER" contentDisplay="TOP" ellipsisString="" layoutX="-8.0" layoutY="800.0" prefHeight="500.0" prefWidth="1108.0" textAlignment="CENTER" wrapText="true" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0">
          <font>
             <Font name="Comic Sans MS Bold Italic" size="60.0" />
          </font>
@@ -173,12 +173,12 @@
             </HBox>
          </children>
       </VBox>
-      <Label fx:id="player1Label" layoutX="654.0" layoutY="800.0" prefHeight="84.0" prefWidth="800.0" AnchorPane.leftAnchor="20.0">
+      <Label fx:id="player1Message" alignment="TOP_LEFT" layoutX="654.0" layoutY="800.0" prefHeight="1000.0" prefWidth="800.0" wrapText="true" AnchorPane.leftAnchor="20.0">
          <font>
             <Font name="Comic Sans MS Bold" size="60.0" />
          </font>
       </Label>
-      <Label fx:id="player1Label1" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="664.0" layoutY="800.0" prefHeight="84.0" prefWidth="800.0" textAlignment="RIGHT" AnchorPane.rightAnchor="0.0">
+      <Label fx:id="player2message" alignment="TOP_RIGHT" contentDisplay="RIGHT" layoutX="664.0" layoutY="800.0" prefHeight="1000.0" prefWidth="800.0" textAlignment="RIGHT" wrapText="true" AnchorPane.rightAnchor="0.0">
          <font>
             <Font name="Comic Sans MS Bold" size="60.0" />
          </font>
