--- a/src/Main/GameComponent/Board/Board.fxml
+++ b/src/Main/GameComponent/Board/Board.fxml
@@ -183,5 +183,15 @@
             <Font name="Comic Sans MS Bold" size="60.0" />
          </font>
       </Label>
+      <ImageView fx:id="validHitImage" fitHeight="35.0" fitWidth="35.0" layoutX="50.0" layoutY="395.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@TablePicture/HittingBall.png" />
+         </image>
+      </ImageView>
+      <ImageView fx:id="invalidHitImage" fitHeight="35.0" fitWidth="35.0" layoutX="50.0" layoutY="460.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@TablePicture/WrongHittingBall.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
