--- a/src/Main/GameComponent/Board/Board.fxml
+++ b/src/Main/GameComponent/Board/Board.fxml
@@ -178,7 +178,7 @@
             <Font name="Comic Sans MS Bold" size="60.0" />
          </font>
       </Label>
-      <Label fx:id="player2message" alignment="TOP_RIGHT" contentDisplay="RIGHT" layoutX="664.0" layoutY="800.0" prefHeight="1000.0" prefWidth="800.0" textAlignment="RIGHT" wrapText="true" AnchorPane.rightAnchor="0.0">
+      <Label fx:id="player2Message" alignment="TOP_RIGHT" contentDisplay="RIGHT" layoutX="664.0" layoutY="800.0" prefHeight="1000.0" prefWidth="800.0" textAlignment="RIGHT" wrapText="true" AnchorPane.rightAnchor="0.0">
          <font>
             <Font name="Comic Sans MS Bold" size="60.0" />
          </font>
